EXTRA_DIST = \
	ac_cxx_have_stl.m4 \
	ac_cxx_namespace.m4 \
	ax_cflags_gcc_option.m4 \
	ax_create_stdint_h.m4 \
	ax_func_sigsetjmp.m4 \
	ax_lib_glibc.m4 \
	ax_path_qmake4.m4 \
	ax_path_qmake5.m4 \
	codeset.m4 \
	gettext.m4 \
	glibc21.m4 \
	iconv.m4 \
	intdiv0.m4 \
	inttypes-pri.m4 \
	inttypes.m4 \
	inttypes_h.m4 \
	isc-posix.m4 \
	lcmessage.m4 \
	lib-ld.m4 \
	lib-link.m4 \
	lib-prefix.m4 \
	nls.m4 \
	po.m4 \
	progtest.m4 \
	stdint_h.m4 \
	uintmax_t.m4 \
	ulonglong.m4 \
	wnn.m4 \
	xft.m4 \
	xkb.m4
